--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3.9'
 services:
   web:
     container_name: simple-webapp
-    build: -t simple-webapp .
+    build: .
     ports: 
        - "3000:3000"
     volumes:
